-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.2.0
-
patch-less client with kernel newer than 2.6.34
-
3
-
6340
Based on LU-1153 this issue is only happening on a client that is running with kernel version 2.6.38.2. In kernel version 2.6.34 the following change was made: http://git.linaro.org/gitweb?p=bsp/st-ericsson/linux-2.6.34-ux500.git;a=commitdiff;h=eef2380c187890816b73b1a4cb89a09203759469
This kernel change added the WARN_ON_ONCE call if the object was truncated. I am in the process of configuring a client to be able to reproduce the issue. The check-in notification implies that we should be using our own version of the setattr in these cases, but I still need to investigate further.