lustre/llite/vvp_io.c
@@ -333,8 +333,7 @@ static int vvp_do_vmtruncate(struct inode *inode, size_t size)
 {
 	int     result;
 	/*
-	 * Only ll_inode_size_lock is taken at this level. lov_stripe_lock()
-	 * is grabbed by ll_truncate() only over call to obd_adjust_kms().
+	 * Only ll_inode_size_lock is taken at this level.
 	 */
 	ll_inode_size_lock(inode);
 	result = vmtruncate(inode, size);
